<resources>
    <string name="app_name">Event Management</string>
    <string name="app_title">Event Management</string>
    <string name="add_event">Add Event</string>

    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_budget">Budget</string>
    <string name="number_of_people">Number of People</string>
    <string name="event_description">Event Description</string>
    <string name="save_event">Save Event</string>
    <string name="delete_event">Delete Event</string>
</resources>
