<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:inputType="date"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_event_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_budget"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_event_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_people"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_save_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_event"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />



    </LinearLayout>
</ScrollView>
